# rx-scanner

./: .gitignore  README.md  pyproject.toml  test_results_20250928_071648.txt
data/: medicine_list_20251001.csv  product_list.csv
rx_scanner/: main.py  sample.py
rx_scanner/database/: db_manager.py  import_csv.py  setup_db.py
rx_scanner/ui/: main_window.py  medicine_selection_dialog.py  prescription_tab.py  search_tab.py
rx_scanner/utils/: ocr_processor.py  text_utils.py
